@@ -1,4 +1,4 @@
-$NetBSD: TODO,v 1.2252 2004/10/25 08:35:09 xtraeme Exp $
+$NetBSD: TODO,v 1.2253 2004/10/25 09:05:27 xtraeme Exp $
 
 Suggested new packages
 ======================
@@ -416,7 +416,6 @@ Suggested package updates
 	o srp_client-1.7.5 [jlam]
 	o staroffice-7p1
 	o stellarium-0.6.1
-	o streamtuner-0.99
 	o svk-0.23
 	o sweep-0.8.3
 	o sylpheed-0.9.99
